# rose21_description

rose21_arm_tf/: CMakeLists.txt  package.xml
rose21_arm_tf/include/rose21_arm_tf/: arm_tf_node.hpp
rose21_arm_tf/src/: arm_tf_node.cpp
rose21_laser_tf/: CMakeLists.txt  package.xml
rose21_laser_tf/include/rose21_laser_tf/: laser_tf_node.hpp
rose21_laser_tf/src/: laser_tf_node.cpp
rose21_lift_tf/: CMakeLists.txt  package.xml
rose21_lift_tf/include/rose21_lift_tf/: lift_tf.hpp  lift_tf_node.hpp
rose21_lift_tf/src/: lift_tf.cpp  lift_tf_node.cpp
rose21_neck_tf/: CMakeLists.txt  package.xml
rose21_neck_tf/include/rose21_neck_tf/: neck_tf.hpp  neck_tf_node.hpp
rose21_neck_tf/src/: neck_tf.cpp  neck_tf_node.cpp
rose21_platform_tf/: CMakeLists.txt  package.xml
rose21_platform_tf/include/rose21_platform_tf/: platform_tf.hpp  platform_tf_node.hpp
rose21_platform_tf/src/: platform_tf.cpp  platform_tf_node.cpp
rose21_urdf/: CMakeLists.txt  package.xml  rose21.xacro
rose21_urdf/launch/: description.launch  neck_dynamixels.launch  state_publisher.launch
rose21_urdf/meshes/: lift_link.dae
rose21_urdf/test/: publish_random_jointstates.py
rose21_urdf/urdf/: rose21.xml
rose21_urdf/urdf/kinect/: kinect.urdf.xacro
