<?xml version="1.0"?>
<package>
  <name>rose21_neck_tf</name>
  <version>0.0.0</version>
  <description>The rose21 lift tf package</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose21_base</build_depend>
  <build_depend>rose_base_msgs</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose21_base</run_depend>
  <run_depend>rose_base_msgs</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
